--- a/modules/admin_manual/pages/configuration/database/db_conversion.adoc
+++ b/modules/admin_manual/pages/configuration/database/db_conversion.adoc
@@ -84,7 +84,7 @@ ownCloud config `config.php`.
 If you updated your ownCloud installation then the old tables, which are
 not used anymore, might still exist. The converter will tell you which ones.
 
-[source,text]
+[source]
 ----
 The following tables will not be converted:
   oc_permissions
