--- a/modules/admin_manual/pages/configuration/files/external_storage/dropbox.adoc
+++ b/modules/admin_manual/pages/configuration/files/external_storage/dropbox.adoc
@@ -37,14 +37,14 @@ Examples:
 
 When configuring as an *admin*:
 
-[source,text]
+[source]
 ----
 http(s)://<<Server_Address>>/settings/admin?sectionid=storage
 ----
 
 When configuring as a *user*:
 
-[source,text]
+[source]
 ----
 http(s)://<<Server_Address>>/settings/personal?sectionid=storage
 ----
