--- a/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_oauth2_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_oauth2_commands.adoc
@@ -66,7 +66,7 @@ oauth2:list-clients [options]
 |===
 
 .Example Output
-[source,text]
+[source]
 ----
   - Desktop Client:
     - name: Desktop Client
