--- a/modules/admin_manual/pages/document_classification/index.adoc
+++ b/modules/admin_manual/pages/document_classification/index.adoc
@@ -193,8 +193,9 @@ Apart from the concrete examples above, a generalized method to employ document 
   Below you find a generalized example where `classification-property` is a placeholder for the property to evaluate.
 +
 --
+[source]
 ----
-//property[@name='classification-property']/vt:lpwstr
+property[@name='classification-property']/vt:lpwstr
 ----
 --
 ** **Property Value**: Enter the value that triggers the classification rule when it matches with the metadata of an uploaded document, e.g., `Confidential`.
@@ -331,10 +332,11 @@ To set it up, add the desired property XPath to the "_Document ID XPath_" field 
 Each uploaded file will generate three entries with different log levels.
 See some exemplary entries below:
 
+[source]
 ----
-INFO: `"Checking classified file 'confidential.xlsx' with document id '2'"`
-INFO: `"Alice uploaded a classified file 'confidential.xlsx' with document class 'Confidential'"`
-DEBUG: `"Assigning tag 'Class: Confidential' to 'confidential.xlsx'"`
+INFO:  "Checking classified file 'confidential.xlsx' with document id '2'"
+INFO:  "Alice uploaded a classified file 'confidential.xlsx' with document class 'Confidential'"
+DEBUG: "Assigning tag 'Class: Confidential' to 'confidential.xlsx'"
 ----
 
 == Limitations
