--- a/modules/admin_manual/pages/enterprise/external_storage/sharepoint-integration_configuration.adoc
+++ b/modules/admin_manual/pages/enterprise/external_storage/sharepoint-integration_configuration.adoc
@@ -80,6 +80,7 @@ all of your SharePoint content. To disable file previews, add the
 following line to the ownCloud config file found in
 `/owncloud/config/config.php`:
 
+[source,php]
 ----
 'enable_previews' => false,
 ----
