--- a/modules/admin_manual/pages/installation/configuration_notes_and_tips.adoc
+++ b/modules/admin_manual/pages/installation/configuration_notes_and_tips.adoc
@@ -25,13 +25,13 @@ This can be the case, for example, for the `date.timezone` setting.
 
 For PHP version {minimum-php-printed} onward, replace `php_version` with the version number installed, e.g., `{minimum-php-version}` in the following examples.
 
-[source,text]
+[source]
 ----
 /etc/php/[php_version]/apache2/php.ini
 ----
 
 or
-[source,text]
+[source]
 ----
 /etc/php/[php_version]/fpm/php.ini
 ----
@@ -40,7 +40,7 @@ or
 
 === php.ini - used by the php-cli and so by ownCloud CRON jobs
 
-[source,text]
+[source]
 ----
 /etc/php/[php_version]/cli/php.ini
 ----
@@ -163,7 +163,7 @@ may be in a sub-directory.
 Usually, you will find some or all of the environment variables already
 in the file, but commented out like this:
 
-[source,text]
+[source]
 ----
 ;env[HOSTNAME] = $HOSTNAME
 ;env[PATH] = /usr/local/bin:/usr/bin:/bin
