--- a/modules/admin_manual/pages/installation/letsencrypt/using_letsencrypt.adoc
+++ b/modules/admin_manual/pages/installation/letsencrypt/using_letsencrypt.adoc
@@ -33,7 +33,7 @@ NOTE: If you have used `certbot-auto` before, read how to upgrade in the {certbo
 
 In general, to run Certbot, use the following command:
 
-[source,console]
+[source,bash]
 ----
 sudo certbot
 ----
@@ -48,7 +48,7 @@ Because certbot is using snap for Ubuntu, there is no need to manually check for
 
 Now that Certbot is installed, register your email address for urgent renewal and security notifications. This command also prepares Certbot’s environment if it’s not already installed. To do this, run the following command:
 
-[source,console]
+[source,bash]
 ----
 sudo certbot register --agree-tos --email <your-email-address>
 ----
@@ -86,7 +86,7 @@ In case you want to update your registered email address use following command:
 
 NOTE: This will affect all the certificates issued using this account.
 
-[source,console]
+[source,bash]
 ----
 sudo certbot register --update-registration --email <your-email-address>
 ----
@@ -114,7 +114,7 @@ Because remembering all the possible options for certbot is difficult, the follo
 
 * Create the following files in the Let’s Encrypt directory which can usually be found in `/etc/letsencrypt`. Rename <your-domain-name>.sh with the name of the domain(s) you want to issue a certificate for.
 +
-[source,console]
+[source,bash]
 ----
 cd /etc/letsencrypt
 touch cli.ini list.sh renew.sh renew-cron.sh delete.sh <your-domain-name>.sh
@@ -122,7 +122,7 @@ touch cli.ini list.sh renew.sh renew-cron.sh delete.sh <your-domain-name>.sh
 
 * Make all files created executable _except_ `cli.ini` by running
 +
-[source,console]
+[source,bash]
 ----
 sudo chmod +x <script-name>
 ----
@@ -223,7 +223,7 @@ NOTE: You can enable the `--dry-run` option which does a test run of the client 
 With all the scripts created, to create an SSL certificate, run the
 following command:
 
-[source,console]
+[source,bash]
 ----
 sudo /etc/letsencrypt/<your-domain-name>.sh
 ----
@@ -261,7 +261,7 @@ You can see that the SSL certificate has been successfully created and that it w
 
 If you want to list (view) existing SSL certificates, use `list.sh`, which can be run as follows:
 
-[source,console]
+[source,bash]
 ----
 sudo /etc/letsencrypt/list.sh
 ----
@@ -299,7 +299,7 @@ xref:manual-renewal[manually] and xref:automatic-renewal-via-crontab[automatical
 
 If you have provided your email address, you will receive reminder notifications.
 
-[source,console]
+[source,bash]
 ----
 sudo /etc/letsencrypt/renew.sh
 ----
@@ -327,7 +327,7 @@ weekly check is sufficient.
 To add a new Cron job to auto-renew your certificates, firstly run the
 following command to edit the job list.
 
-[source,console]
+[source,bash]
 ----
 sudo crontab -e
 ----
@@ -355,7 +355,7 @@ NOTE: This means you need to comment the `include` directive (see the relevant x
 
 If you want to delete an SSL certificate, use the delete.sh script, running it as follows:
 
-[source,console]
+[source,bash]
 ----
 sudo /etc/letsencrypt/delete.sh
 ----
