--- a/modules/admin_manual/pages/installation/linux_packetmanager_install.adoc
+++ b/modules/admin_manual/pages/installation/linux_packetmanager_install.adoc
@@ -96,7 +96,7 @@ zypper addlock owncloud-complete-files
 
 To see if the package has already been locked, use the `locks` command.  If `owncloud-complete-files` is already locked, then you will see output similar to the below example.
 
-[source,text]
+[source]
 ----
 # | Name                    | Type    | Repository
 --+-------------------------+---------+-----------
