--- a/modules/admin_manual/pages/enterprise/external_storage/ldap_home_connector_configuration.adoc
+++ b/modules/admin_manual/pages/enterprise/external_storage/ldap_home_connector_configuration.adoc
@@ -84,14 +84,14 @@ The configuration is done in several steps:
 
 For enhanced security, create a file where the credentials are stored accessing the cifs share like:
 
-[source]
+[source,plaintext]
 ----
 /etc/credentials
 ----
 
 with the username and password on separate lines, replacing the values according your setup:
 
-[source]
+[source,plaintext]
 ----
 username=winhomeuser
 password=winhomepassword
@@ -99,7 +99,7 @@ password=winhomepassword
 
 Create an entry in `/etc/fstab` for the remote Windows root home directory mount and use the credentials file created above, substitute and adapt your parameters and filenames:
 
-[source]
+[source,plaintext]
 ----
 //192.168.1.58/home /mnt/share/users cifs credentials=/etc/credentials,uid=33,gid=33
 ----
