--- a/modules/admin_manual/pages/configuration/files/previews_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/files/previews_configuration.adoc
@@ -40,7 +40,7 @@ Please note that the ownCloud preview system comes already with sensible default
 
 The default list of enabled preview providers which do not need to be explicitly enabled in the config are:
 
-[source]
+[source,plaintext]
 ----
 OC\Preview\BMP
 OC\Preview\GIF
@@ -71,14 +71,14 @@ sudo nano /etc/ImageMagick-7/policy.xml
 
 Search for the following content:
 
-[source]
+[source,plaintext]
 ----
 <policy domain="coder" rights="none" pattern="PDF" />
 ----
 
 and change:
 
-[source]
+[source,plaintext]
 ----
 rights="none" --> rights="read|write"
 ----
@@ -107,7 +107,7 @@ cat resources/config/mimetypemapping.dist.json | grep image
 
 The following providers require the php `imagick` extension:
 
-[source]
+[source,plaintext]
 ----
 OC\Preview\AI
 OC\Preview\EPS
@@ -122,7 +122,7 @@ OC\Preview\TTF
 
 The following providers are only available if either LibreOffice or OpenOffice is installed on the server:
 
-[source]
+[source,plaintext]
 ----
 OC\Preview\MSOfficeDoc
 OC\Preview\MSOffice2003
@@ -133,7 +133,7 @@ OC\Preview\StarOffice
 
 The following providers are available, but disabled by default due to performance or privacy/security concerns:
 
-[source]
+[source,plaintext]
 ----
 OC\Preview\Font
 OC\Preview\Illustrator
