--- a/modules/admin_manual/pages/configuration/server/background_jobs_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/background_jobs_configuration.adoc
@@ -66,7 +66,7 @@ NOTE: There are other methods to invoke programs by the system regularly, e.g., 
 
 By registering your ownCloud `cron.php` script address as an external webcron service (for example, http://www.easycron.com/[easyCron]), you ensure that background jobs are executed regularly. To use this type of service, your external webcron service must be able to access your ownCloud server using the Internet. For example:
 
-[source]
+[source,plaintext]
 ----
 URL to call: http[s]://<domain-of-your-server>/owncloud/cron.php
 ----
