--- a/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_oauth2_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_oauth2_commands.adoc
@@ -48,6 +48,73 @@ oauth2:add-client <name> <client-id> <client-secret> <redirect-url> [<allow-sub-
 | Trust the client even if the redirect-url is localhost. [default: "false"]
 |===
 
+== List Clients
+
+=== Usage
+
+[source,console]
+----
+oauth2:list-clients [options]
+----
+
+=== Options
+
+[width="100%",cols="20%,70%",]
+|===
+| `--output[=OUTPUT]`
+|  The output format to use (plain, json or json_pretty). [default: "plain"]
+|===
+
+.Example Output
+[source,plaintext]
+----
+  - Desktop Client:
+    - name: Desktop Client
+    - redirect-url: http://localhost:*
+    - client-id: xdXOt13JKxym1B1QcEncf2XDkLAexMBFwiT9j6EfhhHFJhs2KM9jbjTmf8JBXE69
+    - client-secret: UBntmLjC2yYCeHwsyj73Uwo9TAaecAetRwMw0xYcvNL9yRdLSUi0hUAHfvCHFeFh
+    - allow-sub-domains: false
+    - trusted: false
+  - Android:
+    - name: Android
+    - redirect-url: oc://android.owncloud.com
+    - client-id: e4rAsNUSIUs0lF4nbv9FmCeUkTlV9GdgTLDH1b5uie7syb90SzEVrbN7HIpmWJeD
+    - client-secret: dInFYGV33xKzhbRmpqQltYNdfLdJIfJ9L5ISoKhNoT9qZftpdWSP71VrpGR9pmoD
+    - allow-sub-domains: false
+    - trusted: false
+  - iOS:
+    - name: iOS
+    - redirect-url: oc://ios.owncloud.com
+    - client-id: mxd5OQDk6es5LzOzRvidJNfXLUZS2oN3oUFeXPP8LpPrhx3UroJFduGEYIBOxkY1
+    - client-secret: KFeFWWEZO9TkisIQzR3fo7hfiMXlOpaqP8CFuTbSHzV1TUuGECglPxpiVKJfOXIx
+    - allow-sub-domains: false
+    - trusted: false
+----
+
+== Modify Client Details
+
+=== Usage
+
+[source,console]
+----
+oauth2:modify-client <name> <key> <value>
+----
+
+=== Arguments
+
+[width="100%",cols="20%,70%",]
+|===
+| `name`
+| Name of client
+
+| `key`
+| Key to be changed. Valid keys are: +
+`name`, `client-id`, `client-secret`, `redirect-url`, `allow-sub-domains`, `trusted`
+
+| `value`
+| The new value of the key.
+|===
+
 == Remove a Client
 
 === Usage
