--- a/modules/admin_manual/pages/enterprise/external_storage/enterprise_only_auth.adoc
+++ b/modules/admin_manual/pages/enterprise/external_storage/enterprise_only_auth.adoc
@@ -184,7 +184,7 @@ Note that sub-keys, except the password key are not used as elements for the mou
 +
 Nested arrays are beneficial when having more than one server (host) with a password, but keeping them together in one master key. To access a particular sub-key in the mount definition, use the following scheme:
 +
-[source]
+[source,plaintext]
 ----
 <key>#<sub-key-level-1>#<sub-key-level-2>...
 ----
@@ -199,7 +199,7 @@ From the example above, +
 Single array::
 Taking the single array example above to use the password for the mount, the value to be entered would be like:
 +
-[source]
+[source,plaintext]
 ----
 customApp.config
 ----
@@ -207,7 +207,7 @@ customApp.config
 Nested arrays::
 Taking the nested array example above to use the password for the mount for the host with sub-key `server1`, the value to be entered would be like:
 +
-[source]
+[source,plaintext]
 ----
 customApp.config#server1
 ----
