--- a/modules/admin_manual/pages/qnap/index.adoc
+++ b/modules/admin_manual/pages/qnap/index.adoc
@@ -179,7 +179,7 @@ Enter the admin user's password and you'll be in the QNAP Console Management - M
 
 In the Console Management you have several options that might be useful at some point:
 
-[source]
+[source,plaintext]
 ----
 +--------------------------------------------------------------------+
 |  Console Management - Main menu                                    |
