--- a/modules/admin_manual/pages/installation/manual_installation/server_prep_ubuntu_20.04.adoc
+++ b/modules/admin_manual/pages/installation/manual_installation/server_prep_ubuntu_20.04.adoc
@@ -223,7 +223,7 @@ WARNING: You may get completely unexpected behaviour or a broken environment if 
 
 If you are using a PECL install later on, check the output of the installation command soon after it has started. You will find a text like:
 
-[source]
+[source,plaintext]
 ----
 ...
 PHP Api Version:         20190902
@@ -240,14 +240,14 @@ php -i | grep extension_dir
 
 If the output is different than the style below, there is a problem that needs fixing:
 
-[source]
+[source,plaintext]
 ----
 extension_dir => /usr/lib/php/20180731 => /usr/lib/php/20180731
 ----
 
 This is the output that shows a fix is needed:
 
-[source]
+[source,plaintext]
 ----
 PHP Warning:  PHP Startup: smbclient: Unable to initialize module
 Module compiled with module API=20190902
@@ -282,7 +282,7 @@ sudo service apache2 restart
 
 NOTE: Do not get confused by the name `smbclient`. It is on the one hand a {smbclient_url}[command-line SMB/CIFS client for Unix], and on the other hand the package name for the {pecl_url}[PECL smbclient] PHP extension
 
-NOTE: Alternatively you can install `smbclient` from {libsmbclient-php_url}[source].
+NOTE: Alternatively you can install `smbclient` from {libsmbclient-php_url}[source,plaintext].
 
 == php-imagick Library
 
