[10.8] [PR 145] Set a source language when there is no set
Backport of PR #145

--- a/modules/admin_manual/pages/installation/manual_installation/manual_installation.adoc
+++ b/modules/admin_manual/pages/installation/manual_installation/manual_installation.adoc
@@ -64,7 +64,7 @@ Download the archive of the latest ownCloud version:
   You can download either the `.tar.bz2` or `.zip` archive. Based on the example below, copy the
   link of the selected file and run the following command to download it: +
 +
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 wget https://download.owncloud.org/community/{oc-complete-name}.tar.bz2
 ----
