--- a/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_oauth2_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_oauth2_commands.adoc
@@ -6,7 +6,7 @@ The `oauth2` commands _add-client_ and _remove-client_, manage OAuth2 clients.
 
 Use these commands to configure the OAuth2 app:
 
-[source,console]
+[source,plaintext]
 ----
 oauth2
   oauth2:add-client     Adds an OAuth2 client
@@ -17,7 +17,7 @@ oauth2
 
 === Usage
 
-[source,console]
+[source,plaintext]
 ----
 oauth2:add-client <name> <client-id> <client-secret> <redirect-url> [<allow-sub-domains> [<trusted> [<force-trust>]]]
 ----
@@ -52,7 +52,7 @@ oauth2:add-client <name> <client-id> <client-secret> <redirect-url> [<allow-sub-
 
 === Usage
 
-[source,console]
+[source,plaintext]
 ----
 oauth2:list-clients [options]
 ----
@@ -95,7 +95,7 @@ oauth2:list-clients [options]
 
 === Usage
 
-[source,console]
+[source,plaintext]
 ----
 oauth2:modify-client <name> <key> <value>
 ----
@@ -119,7 +119,7 @@ oauth2:modify-client <name> <key> <value>
 
 === Usage
 
-[source,console]
+[source,plaintext]
 ----
 oauth2:remove-client <client-id>
 ----
