--- a/modules/admin_manual/pages/installation/deployment_recommendations.adoc
+++ b/modules/admin_manual/pages/installation/deployment_recommendations.adoc
@@ -348,7 +348,7 @@ Redis in a primary-replica configuration is {cloud-warm-hot-server-url}[a hot fa
 
 If you’re using {mariadb-galera-cluster-url}[MariaDB Galera Cluster] with your ownCloud installation, you may encounter deadlocks when you attempt to sync a large number of files. You may also encounter database errors, such as this one:
 
-[source,console]
+[source,plaintext]
 ----
 SQLSTATE[40001]: Serialization failure: 1213 Deadlock found when trying to get lock; try restarting transaction
 ----
@@ -377,14 +377,14 @@ NOTE: This setting is disabled by default. See the {galera-cluster-wsrep-docs-ur
 
 Local session management on the application server. PHP sessions are stored in a temporary filesystem, mounted at the operating system-specific session storage location. You can find out where that is by running
 
-[source,console]
+[source,bash]
 ----
 grep -R 'session.save_path' /etc/php*
 ----
 
 and then add it to the `/etc/fstab` file, for example:
 
-[source,console,subs="attributes+"]
+[source,bash,subs="attributes+"]
 ----
 include::example$installation/deployment_recommendations/set_session_path.sh[]
 ----
