--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -1,4 +1,4 @@
 * xref:index.adoc[Introduction]
 include::admin_manual:partial$nav.adoc[]
-include::user_manual:partial$nav.adoc[]
+// include::user_manual:partial$nav.adoc[]
 include::developer_manual:partial$nav.adoc[]
