--- a/modules/admin_manual/pages/installation/deployment_recommendations.adoc
+++ b/modules/admin_manual/pages/installation/deployment_recommendations.adoc
@@ -49,7 +49,7 @@ The recommendations presented here are based on a standard ownCloud installation
 * Database: MySQL/MariaDB with InnoDB storage engine (MyISAM is not supported, see:
 xref:configuration/database/linux_database_configuration.adoc#mysql-mariadb[MySQL / MariaDB storage engine])
 * And a recent PHP Version. See xref:installation/system_requirements.adoc[System Requirements]
-* Consider setting up a scale-out deployment, or using xref:{latest-webui-version}@webui:classic_ui::files/federated_cloud_sharing.adoc[Federated Cloud Sharing] to keep individual ownCloud instances to a manageable size.
+* Consider setting up a scale-out deployment, or using xref:{latest-webui-version}@webui:classic_ui:files/federated_cloud_sharing.adoc[Federated Cloud Sharing] to keep individual ownCloud instances to a manageable size.
 
 NOTE: Whatever the size of your organization, always keep one thing in mind: +
 *The amount of data stored in ownCloud will only grow - plan ahead.*
@@ -132,7 +132,7 @@ Alternatively, you can make nightly backups — with service interruption — as
 4.  Push database dump to backup.
 5.  Start Apache.
 
-After these steps have been completed, then, optionally, rsync the backup to either an external backup storage or tape backup. See xref:maintenance/index.adoc[the Maintenance section] of the Administration manual for tips on backups and restores.
+After these steps have been completed, then, optionally, rsync the backup to either an external backup storage or tape backup. See the xref:maintenance/backup_and_restore/backup.adoc[backup] and  xref:maintenance/backup_and_restore/restore.adoc[restore] section of the Administration manual for tips on backups and restores.
 
 ==== Authentication
 
