--- a/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
+++ b/modules/admin_manual/pages/installation/quick_guides/ubuntu_20_04.adoc
@@ -244,10 +244,7 @@ occ config:system:set \
 occ config:system:set \
    memcache.locking \
    --value '\OC\Memcache\Redis'
-occ config:system:set \
-   redis \
-   --value '{"host": "127.0.0.1", "port": "{std-port-redis}"}' \
-   --type json
+occ config:system:set redis --value '{"host": "127.0.0.1", "port": "6379"}' --type json
 ----
 
 === Configure Log Rotation
